--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -42,7 +42,7 @@
 
         <% if current_user %>
 
-          <li><%= link_to current_user.name, [:root] %></li>
+          <li><%= link_to current_user.name, [:root], class: 'logged-in-username' %></li>
           <li><%= link_to "Logout", '/logout' %></li>
 
         <% else %>
