--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -13,17 +13,25 @@
       </div>
 
       <div class="col-sm-8">
-        <dl class="dl-horizontal">
-          <dt>Name</dt>
-          <dd><%= @product.name %></dd>
-          <dt>Description</dt>
-          <dd><%= @product.description %></dd>
-          <dt>Quantity</dt>
-          <dd><%= @product.quantity %></dd>
-          <dt>Price</dt>
-          <dd><%= @product.price %></dd>
-        </dl>
+        <div class="row">
+          <dl class="dl-horizontal">
+            <dt>Name</dt>
+            <dd><%= @product.name %></dd>
+            <dt>Description</dt>
+            <dd><%= @product.description %></dd>
+            <dt>Quantity</dt>
+            <dd><%= @product.quantity %></dd>
+            <dt>Price</dt>
+            <dd><%= @product.price %></dd>
+          </dl>
+        </div>
+        <div class="row">
+          <%= link_to add_item_cart_path(product_id: @product.id), class: 'btn btn-primary', method: :put do %>
+            <%= fa_icon "shopping-cart", text: 'Add' %>
+          <% end %>
+        </div>
       </div>
+
     </div>
 
   </article>
