--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -26,8 +26,12 @@
           </dl>
         </div>
         <div class="row">
-          <%= link_to add_item_cart_path(product_id: @product.id), class: 'btn btn-primary', method: :put do %>
-            <%= fa_icon "shopping-cart", text: 'Add' %>
+          <% if (@product.quantity > 1) %>
+            <%= link_to add_item_cart_path(product_id: @product.id), class: 'btn btn-primary pull-right', method: :put do %>
+              <%= fa_icon "shopping-cart", text: 'Add' %>
+            <% end %>
+          <% else %>
+            <button class="btn btn-danger pull-right" disabled>Sold Out</button>
           <% end %>
         </div>
       </div>
