--- a/app/views/user_mailer/confirmation.html.erb
+++ b/app/views/user_mailer/confirmation.html.erb
@@ -1,6 +1,10 @@
+<!DOCTYPE html>
 <html>
-<head></head>
-<body>
-  <h1>Testing Mail</h1>
-</body>
+  <head>
+    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
+  </head>
+  <body>
+    <h1>Thank you for your order.</h1>
+    <p>You have successfully made a purchase, have a great day!</p>
+  </body>
 </html>
