--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,17 +1,12 @@
 <section class="products-show">
-
   <header class="page-header">
     <h1><%= link_to @product.category.name, @product.category %> &raquo; <%= @product.name %></h1>
   </header>
-
   <article class="product-detail">
-
     <div class="row">
-
       <div class="col-sm-4">
         <%= image_tag @product.image.url, class: 'main-img' %>
       </div>
-
       <div class="col-sm-8">
         <div class="row">
           <dl class="dl-horizontal">
@@ -25,19 +20,45 @@
             <dd><%= @product.price %></dd>
           </dl>
         </div>
-        <div class="row">
-          <% if (@product.quantity > 1) %>
-            <%= link_to add_item_cart_path(product_id: @product.id), class: 'btn btn-primary pull-right', method: :put do %>
-              <%= fa_icon "shopping-cart", text: 'Add' %>
-            <% end %>
-          <% else %>
-            <button class="btn btn-danger pull-right" disabled>Sold Out</button>
-          <% end %>
-        </div>
       </div>
-
+    <div>
+    <div class="row">
+      <% if (@product.quantity > 1) %>
+        <%= link_to add_item_cart_path(product_id: @product.id), class: 'btn btn-primary pull-right', method: :put do %>
+          <%= fa_icon "shopping-cart", text: 'Add' %>
+        <% end %>
+      <% else %>
+        <button class="btn btn-danger pull-right" disabled>Sold Out</button>
+      <% end %>
     </div>
-
+    <div class="row">
+      <div class="panel panel-default products">
+        <table class="table table-bordered">
+          <thead>
+            <tr>
+              <th colspan="2">Reviews</th>
+            </tr>
+          </thead>
+          <tbody>
+            <%= render @reviews , product: @product%>
+          </tbody>
+        </table>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-6 col-sm-offset-1">
+        <%= form_for [@product, Review.new] do |form| %>
+        <div class="form-group">
+          <%= form.label :description %>
+          <%= form.text_field :description, class: 'form-control' %>
+        </div>
+        <div class="form-group">
+           <%= form.label :rating %>
+           <%= form.select :rating, [1,2,3,4,5], class: 'form-control' %>
+        </div>
+          <%= form.submit 'Create Product', class: 'btn btn-primary' %>
+        <% end %>
+      </div>
+    </div>
   </article>
-
 </section>
